[package]
name = "daemonbase"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono          = "0.4.23"
clap            = { version = "4", features = [ "derive" ] }
log             = "0.4.8"
serde           = { version = "1.0.95", features = [ "derive" ] }
toml_edit       = "0.20"


[target.'cfg(unix)'.dependencies]
nix             = { version = "0.27.1", features = [ "fs", "process", "user" ] }
syslog          = "6"

