[package]
name = "daemonbase"
version = "0.1.3"
edition = "2021"
rust-version = "1.81"
authors = ["NLnet Labs <rust-team@nlnetlabs.nl>"]
description = "A library for providing the foundation for daemon processes."
documentation = "https://docs.rs/daemonbase/"
homepage = "https://github.com/nlnetlabs/daemonbase/"
repository = "https://github.com/NLnetLabs/daemonbase^"
keywords = ["daemon", "logging", "system-service" ]
categories = [ "config" ]
license = "BSD-3-Clause"

[dependencies]
chrono          = "0.4.23"
clap            = { version = "4", features = [ "derive" ] }
log             = "0.4.8"
serde           = { version = "1.0.95", features = [ "derive" ] }
toml_edit       = "0.23"


[target.'cfg(unix)'.dependencies]
nix             = { version = "0.30", features = [ "fs", "net", "process", "socket", "user" ] }
syslog          = "7"

